# gazebo2ice

./: CMakeLists.txt  README.md
examples/: example.cfg  example.world
include/gazebo2ice/: gazebotools.h  globalicemanager.h  icemanager.h  icemodelplugin.hh
src/core/: gazebotools.cpp  globalicemanager.cpp  icemanager.cpp
src/plugins/: modelplugin.cc  pose3dplugin.cc  systemplugin.cc
src/tests/: test.cc
